@@ -1212,6 +1212,6 @@ msg_town_reclaimed: '&b%s has reclaimed the town of %s.'
 msg_err_cannot_attack_ruined_town: '&6[War]&c You cannot attack a ruined town.'
 msg_err_cannot_use_command_because_town_ruined: "&cYou cannot use this command because your town is ruined. To resume normal command usage, either reclaim the town using ''/town reclaim'', or leave the town using ''/town leave''."
 msg_warning_your_town_is_ruined_for_x_more_hours: '&cYour town lies in a ruined state for %d more hours. Use ''/town reclaim'' to save the town and become mayor.'
-msg_time_remaining_before_full_removal: '&cTime remaining before full removal: &d hours.'
-msg_time_until_reclaim_available: '&cTime until reclaim available: &d hours.'
+msg_time_remaining_before_full_removal: '&cTime remaining before full removal: %d hours.'
+msg_time_until_reclaim_available: '&cTime until reclaim available: %d hours.'
 msg_reclaim_available: '&aReclaim available.'
