@@ -5485,3 +5485,5 @@ v0.92.0.11:
   - API: Added TownLeaveEvent
     - A cancellable event fired directly before a player would accept/deny leaving their town.
     - Closes #4513.
+  - Fix ruin hours not being shown properly in the town status screen.
+    - Closes #4534.
